fix animation overlap #44

--- a/chrome/WhiteSur/parts/toolbox.css
+++ b/chrome/WhiteSur/parts/toolbox.css
@@ -120,3 +120,8 @@ toolbarbutton.bookmark-item {
 	border-radius: 3px !important;
 	max-height: 20px !important;
 }
+
+/* Fix reload button animation overlap with icon */
+#reload-button:not([displaystop])>.toolbarbutton-animatable-box>.toolbarbutton-animatable-image {
+	animation-duration: 0s !important;
+}
